--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -805,6 +805,8 @@
 	"Naresuan's Elephant":{
 		Italian:"Elefante di Naresuan"
 		Czech:"Naresuanův slon"
+		Simplified_Chinese:"纳黎萱战象"
+		Traditional_Chinese:"納黎萱戰象"
 	}
 
 	"Samurai":{
