--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -85,6 +85,7 @@
 	"One City Challenge":{
 		Italian:"Sfida a città singola"
 		Polish:"Wyzwanie z limitem 1 miasta",
+		Simplified_Chinese:"单城市挑战"
 		Traditional_Chinese:"單城市挑戰"
 		Czech:"Výzva - Jen jedno město"
 	}
@@ -93,7 +94,7 @@
 		Italian:"Niente barbari"
 		French:"Pas de barbare"
 		Simplified_Chinese:"无蛮族"
-		Traditional_Chinese:"停用蠻族"
+		Traditional_Chinese:"無蠻族"
 		Russian:"Без варваров"
                 Korean:"야만인 없음"
 		Polish:"Brak barbarzyńców"
@@ -104,7 +105,8 @@
 	"No ancient ruins": {
 		Italian:"Niente antiche rovine"
 		Polish:"Bez antycznych ruin",
-		Traditional_Chinese:"無古代遺跡"
+		Simplified_Chinese:"无远古遗迹"
+		Traditional_Chinese:"無遠古遺跡"
 		Czech:"Bez starobylých ruin"
 	}
 
@@ -123,7 +125,7 @@
 	"Scientific": {//it can be showed correct as usual in chinese, so I'm not translate it.
 		Italian:"Scientifica"
 		French: "Scientifique"
-		Simplified_Chinese:"科技胜利"
+		Simplified_Chinese:"科技"
 		Traditional_Chinese:"科技"
 		Russian:"Научная"
                 Korean:"과학"
@@ -135,7 +137,7 @@
 	"Domination": {//it can be showed correct as usual in chinese, so I'm not translate it.
 		Italian:"Dominazione"
 		French: "Conquete"
-		Simplified_Chinese:"征服胜利"
+		Simplified_Chinese:"征服"
 		Traditional_Chinese:"征服"
 		Russian:"Завоевание"
                 Korean:"정복"
@@ -147,7 +149,7 @@
 	"Cultural": {//it can be showed correct as usual in chinese, so I'm not translate it.
 		Italian:"Culturale"
 		French: "Culturelle"
-		Simplified_Chinese:"文化胜利"
+		Simplified_Chinese:"文化"
 		Traditional_Chinese:"文化"
 		Russian:"Культурная"
                 Korean:"문화"
@@ -981,8 +983,8 @@
 	"Turns between autosaves":{
 		Italian:"Turni tra autosalvataggi"
 		French:"Tours avant sauvegarde automatique"
-		Simplified_Chinese:"自动存档相隔回合"
-		Traditional_Chinese:"自動存檔/回合",
+		Simplified_Chinese:"自动存档间隔回合"
+		Traditional_Chinese:"自動存檔間隔回合",
 		Portuguese:"Turnos entre autosaves"
 		Russian:"Кол-во ходов между автосохранениями"
                 Korean:"자동 저장 라운드"
@@ -994,7 +996,7 @@
 		Italian:"Volume effetti"
 		French:"Volume sonore"
 		Simplified_Chinese:"音效音量"
-		Traditional_Chinese:"音量"
+		Traditional_Chinese:"音效音量"
 		Russian:"Громкость звука"
                 Korean:"음향효과 음량"
 		Czech:"Hlasitost zvuků"
@@ -1010,16 +1012,21 @@
 
 	"Download music":{
 		Italian:"Scarica musica",
+		Simplified_Chinese:"下载音乐"
 		Traditional_Chinese:"下載音樂"
 		Czech:"Stáhnout hudbu"
 }
 
 	"Downloading...": {
 		Czech:"Probíhá stahování..."
+		Simplified_Chinese:"下载中..."
+		Traditional_Chinese:"下載中..."
 }
 
 	"Could not download music!": {
 		Czech:"Nepodařilo se stáhnout hudbu!"
+		Simplified_Chinese:"无法下载音乐！"
+		Traditional_Chinese:"無法下載音樂！"
 }
 
 	"Show":{
