--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -1690,6 +1690,9 @@
 		Ukrainian:"Обстрілювати"
 }
 
+	"NUKE":{
+}
+
 	"Captured!":{// Shown in the battle table when attacking a civilian unit
 		Italian:"Cattura!"
 		Russian:"Захвачен!"
